# VanillaCoffee

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
.trunk/: trunk.yaml
assets/packs/asha/: pack.registry
assets/packs/asha/characters/bOldHag/: oldhag.aseprite  oldhag.character.toml
assets/packs/asha/characters/cSkeleton/: skeleton.aseprite  skeleton.character.toml
assets/packs/asha/characters/cSlime/: slime.aseprite  slime.character.toml
assets/packs/asha/characters/examplenpc/: examplenpc.npc.toml
assets/packs/asha/characters/hBennen/: bennen.aseprite  bennen.character.toml
assets/packs/asha/characters/hRexxen/: rexxen.aseprite  rexxen.character.toml
assets/packs/asha/items/wAutoPistol/: autopistol.aseprite  autopistol.weapon.toml
assets/packs/asha/items/wSmallPistol/: smallpistol.aseprite  smallpistol.weapon.toml
assets/packs/asha/items/wSmallSmg/: smallsmg.aseprite  smallsmg.weapon.toml
assets/packs/asha/items/wexampleweapon/: exampleweapon.weapon.toml
assets/packs/asha/levels/: aspenhallsLevelSet.ldtk
assets/packs/asha/levels/aspenhallsLevelSet/: BiGOpEnSpAcE.ldtkl  DahhButtrffreeee.ldtkl  DungeonStartL1.ldtkl  HagsDen.ldtkl  HagsWarRoom.ldtkl  HideoutL1.ldtkl  HideoutL2.ldtkl  HideoutL3.ldtkl  InchWormBB.ldtkl  PlainOlSquare.ldtkl  RewardTest.ldtkl  RightHandBracket.ldtkl  SailrmenSea_Men.ldtkl  ShutesNLadders.ldtkl  SmallShortDonutRoom.ldtkl  SpokeyEyeBall.ldtkl  TinyEyeBall.ldtkl  TinySquare.ldtkl  WierdTeleportyThing.ldtkl
crates/asha_macros/: Cargo.toml
crates/asha_macros/src/: lib.rs
crates/aspenlib/: Cargo.toml
crates/aspenlib/src/: bundles.rs  consts.rs  lib.rs
crates/aspenlib/src/debug/: debug_dirs.rs  mod.rs
crates/aspenlib/src/dev_tools/: debug_dirs.rs  debug_visuals.rs  dump_schedules.rs  egui_tools.rs  mod.rs  picking_debug.rs
crates/aspenlib/src/dev_tools/console/: mod.rs  systems.rs
crates/aspenlib/src/game/: animations.rs  attributes_stats.rs  audio.rs  components.rs  mod.rs
crates/aspenlib/src/game/characters/: components.rs  mod.rs
crates/aspenlib/src/game/characters/ai/: components.rs  mod.rs  skillsusing_ai.rs  stupid_ai.rs
crates/aspenlib/src/game/characters/boss/: mod.rs
crates/aspenlib/src/game/characters/creeps/: mod.rs
crates/aspenlib/src/game/characters/player/: actions.rs  mod.rs  movement.rs
crates/aspenlib/src/game/combat/: damage.rs  mod.rs  unarmed.rs
crates/aspenlib/src/game/game_world/: collisions.rs  components.rs  mod.rs  progress.rs
crates/aspenlib/src/game/game_world/dungeonator_v2/: components.rs  mod.rs  room_database.rs
crates/aspenlib/src/game/game_world/dungeonator_v2/hallways/: hallway_builder.rs  mod.rs
crates/aspenlib/src/game/game_world/dungeonator_v2/tile_graph/: impl.rs  mod.rs
crates/aspenlib/src/game/game_world/hideout/: mod.rs  systems.rs
crates/aspenlib/src/game/game_world/world_objects/: decode_instance.rs  mod.rs
crates/aspenlib/src/game/game_world/world_objects/systems/: mod.rs
crates/aspenlib/src/game/input/: action_maps.rs  actor_targeting.rs  mod.rs  software_cursor.rs
crates/aspenlib/src/game/input/touch_gamepad/: mod.rs
crates/aspenlib/src/game/interface/: mod.rs  ui_widgets.rs
crates/aspenlib/src/game/interface/pause_menu/: mod.rs
crates/aspenlib/src/game/interface/playing_ui/: action_buttons.rs  gun_hud.rs  minimap.rs  mod.rs  stat_hud.rs
crates/aspenlib/src/game/interface/settings_menu/: mod.rs
crates/aspenlib/src/game/interface/start_menu/: mod.rs
crates/aspenlib/src/game/interface/touchgamepad_ui/: mod.rs  shunts.rs
crates/aspenlib/src/game/items/: mod.rs
crates/aspenlib/src/game/items/weapons/: components.rs  hit_detection.rs  mod.rs  utils.rs
crates/aspenlib/src/game/items/weapons/forms/: gun.rs  mod.rs
crates/aspenlib/src/game/progress/: dungeon_tracking.rs  mod.rs
crates/aspenlib/src/loading/: assets.rs  mod.rs  splashscreen.rs
crates/aspenlib/src/loading/config/: mod.rs
crates/aspenlib/src/loading/custom_assets/: actor_definitions.rs
crates/aspenlib/src/loading/registry/: mod.rs  utils.rs
crates/aspenlib/src/utilities/: mod.rs
crates/desktop/: Cargo.toml  Makefile.toml
crates/desktop/src/: main.rs
crates/mobile/: Cargo.toml  Makefile.toml  build.rs
crates/mobile/android-project/: gradle.properties  settings.gradle
crates/mobile/android-project/app/: build.gradle
crates/mobile/android-project/app/src/main/: AndroidManifest.xml
crates/mobile/android-project/app/src/main/java/com/hellzbellz123/aspen_halls/: MainActivity.java
crates/mobile/src/: lib.rs
crates/wasm/: Cargo.toml  Makefile.toml
crates/wasm/src/: main.rs
tools/: FlicFlac.ini  adb-connecter.sh
