[package]
name = "aspen_halls_mobile"
version = "0.0.1"
authors = ["Taylor Smith <aspenhalls.org@gmail.com>"]
edition = "2021"
description = "aspen halls launcher lib for mobile platform apps"
documentation = "https://github.com/Hellzbellz123/AspenHalls/blob/main/README.md"
homepage = "https://hellzbellz123.github.io/AspenHalls/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Hellzbellz123/VanillaCoffee/"
keywords = ["videogame", "game", "application", "bin"]
categories = ["games"]

[lib]
name = "aspen_halls_mobile"
crate-type = ["staticlib", "cdylib"]

[features]
develop = ["aspenlib/develop"]

[dependencies]
aspenlib = { path = "../aspenlib" }
bevy = { version = "*", features = [
  "android_shared_stdcxx", # this is for cpal/oboe
] }

# this target cfg hides the rust-analyzer error.
# cargo apk wraps the build inside NDK's toolchain which accepts the required gcc flags
[target.'cfg(target_os = "android")'.dependencies]
oboe = { version = "0.6.1", features = ["shared-stdcxx"] }
# ndk-context = "0.1.1"
# jni = { version = "0.21.1", features = ["invocation"] }
